addons/stock/static/src/scss/stock_move_list.scss
.btn[name="action_show_details"] {
    border-width: 0;
}

