[FIX] stock: UI issue: Multi-line description text is cut off
Current behavior:
When a user manually keys in or pastes a multi-line description into the
Product column on the "Operations" tab, the text does not display properly.
The row height does not auto-expand to accommodate the multi-line text,
causing the bottom lines of the description to be cut off and unreadable.

Expected behavior:
The bottom line of the description should still be visible in edit mode.

Steps to reproduce:
1. Inventory > Operations > Deliveries > New
2. Add a new product and hit Enter to add its description
3. Observe that the bottom line gets clipped

Cause of the issue:
Caused by PR: https://github.com/odoo/odoo/pull/259855
(https://www.odoo.com/odoo/my-tasks/5927775), which calculates the height
of textarea dynamically. However, the PR targets iPad view, which affects
how it dynamically calculate the height of textarea on desktop view.

Fix:
Reset the height of the product label field, and let CSS calculate its
height natively.

opw-6283001

--- a/addons/stock/static/src/scss/stock_move_list.scss
+++ b/addons/stock/static/src/scss/stock_move_list.scss
@@ -1,3 +1,7 @@
 .btn[name="action_show_details"] {
     border-width: 0;
 }
+
+.o_field_move_product_label_field {
+    height: unset !important;
+}
